// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP On Demand T V Page A11y I can see the skip to content link 1`] = `"U gudub qaybta macluumaadka"`;

exports[`AMP On Demand T V Page AMP Consent config 1`] = `
Object {
  "consents": Object {
    "user-consent": Object {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": Object {
    "default": Object {
      "timeout": Object {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": Object {
        "user-consent": Array [],
      },
    },
  },
}
`;

exports[`AMP On Demand T V Page AMP Geo config 1`] = `
Object {
  "ISOCountryGroups": Object {
    "eea": Array [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
  },
}
`;

exports[`AMP On Demand T V Page Analytics ATI 1`] = `
Object {
  "requests": Object {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=83&p=somali.bbc_somali_tv.tv_programmes.w13xttqt.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn:bbc:pips:w13xttqt]&x2=[amp]&x3=[news-somali]&x4=[so]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[player-episode]&x8=[simorgh]&x9=[Caawa+Iyo+Caalamka+-+BBC+News+Somali]&ref=\${documentReferrer}",
  },
  "transport": Object {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": Object {
    "trackPageview": Object {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP On Demand T V Page Analytics chartbeat 1`] = `
Object {
  "vars": Object {
    "contentType": "player-episode",
    "domain": "test.bbc.co.uk",
    "sections": "Somali, Somali - TV",
    "title": "Caawa Iyo Caalamka - BBC News Somali",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP On Demand T V Page Analytics comscore 1`] = `
Object {
  "extraUrlParams": Object {
    "comscorekw": "amp",
  },
  "vars": Object {
    "c2": "17986528",
  },
}
`;

exports[`AMP On Demand T V Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/somali"`;

exports[`AMP On Demand T V Page Footer I can see the footer copyright and external linking text 1`] = `"© 2020 BBC. BBC masuul kama ahan macluumadka bogagga kale ee dibadda. Akhri xogta ku saabsan sida aan u abaarno bogagga dibadda."`;

exports[`AMP On Demand T V Page Footer Link should match text and url 1`] = `
Object {
  "text": "BBC News, Somali",
  "url": "/somali",
}
`;

exports[`AMP On Demand T V Page Footer Link should match text and url 2`] = `
Object {
  "text": "Sababta aad ku aamini kartid BBC News",
  "url": "https://www.bbc.com/somali/hayadeed-49283375",
}
`;

exports[`AMP On Demand T V Page Footer Link should match text and url 3`] = `
Object {
  "text": "Shuruucda isticmaalka",
  "url": "https://www.bbc.com/somali/hayadeed-37098011",
}
`;

exports[`AMP On Demand T V Page Footer Link should match text and url 4`] = `
Object {
  "text": "Ku saabsan BBC",
  "url": "https://www.bbc.com/somali/hayadeed-37098081",
}
`;

exports[`AMP On Demand T V Page Footer Link should match text and url 5`] = `
Object {
  "text": "Shuruucda xogta gaarka ah",
  "url": "https://www.bbc.com/somali/hayadeed-37098082",
}
`;

exports[`AMP On Demand T V Page Footer Link should match text and url 6`] = `
Object {
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP On Demand T V Page Footer Link should match text and url 7`] = `
Object {
  "text": "La xiriir BBC",
  "url": "https://www.bbc.com/somali/hayadeed-37098613",
}
`;

exports[`AMP On Demand T V Page Footer Link should match text and url 8`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/",
}
`;

exports[`AMP On Demand T V Page Footer Link should match text and url 9`] = `
Object {
  "text": "Akhri xogta ku saabsan sida aan u abaarno bogagga dibadda.",
  "url": "https://www.bbc.co.uk/help/web/links/",
}
`;

exports[`AMP On Demand T V Page Header I can see the branding 1`] = `"BBC News, Somali"`;

exports[`AMP On Demand T V Page Header Navigation link should match text and url 1`] = `
Object {
  "text": "War",
  "url": "/somali",
}
`;

exports[`AMP On Demand T V Page Header Navigation link should match text and url 2`] = `
Object {
  "text": "Warar dheeraad ah",
  "url": "/somali/war",
}
`;

exports[`AMP On Demand T V Page Header Navigation link should match text and url 3`] = `
Object {
  "text": "Ganacsi",
  "url": "/somali/topics/2f2db234-3c2d-40a4-b4ac-eea661faadd0",
}
`;

exports[`AMP On Demand T V Page Header Navigation link should match text and url 4`] = `
Object {
  "text": "Cayaaraha",
  "url": "/somali/cayaaraha",
}
`;

exports[`AMP On Demand T V Page Header Navigation link should match text and url 5`] = `
Object {
  "text": "Aqoon Guud",
  "url": "/somali/aqoon_guud",
}
`;

exports[`AMP On Demand T V Page Header Navigation link should match text and url 6`] = `
Object {
  "text": "Muuqaal",
  "url": "/somali/media/video",
}
`;

exports[`AMP On Demand T V Page Header Navigation link should match text and url 7`] = `
Object {
  "text": "Barnaamijyada Idaacadda",
  "url": "/somali/ka_qayb_gal/programmes",
}
`;

exports[`AMP On Demand T V Page I can see the brand title 1`] = `"Caawa Iyo Caalamka"`;

exports[`AMP On Demand T V Page I can see the episode summary 1`] = `"Kala soco telefishinka BBC News Somali 30 daqiiqo oo isugu jira warar, wareysiyo & faallooyin ku saabsan Soomaaliya iyo Caalamka"`;

exports[`AMP On Demand T V Page I can see the episode title 1`] = `"23 Juunyo 2020"`;

exports[`AMP On Demand T V Page Media Player a11y assistive technology can read the media player title 1`] = `"Ciyaaridda Muuqaalka"`;

exports[`AMP On Demand T V Page Media Player iframe with valid URL should be rendered 1`] = `"https://polling.test.bbc.co.uk/ws/av-embeds/media/somali/bbc_somali_tv/w172xcmnrdmbygt/so/amp?morph_env=live"`;

exports[`AMP On Demand T V Page SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/somali/images/icons/icon-192x192.png",
}
`;

exports[`AMP On Demand T V Page SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://news.files.bbci.co.uk/include/articles/public/somali/images/icons/icon-72x72.png",
}
`;

exports[`AMP On Demand T V Page SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://news.files.bbci.co.uk/include/articles/public/somali/images/icons/icon-96x96.png",
}
`;

exports[`AMP On Demand T V Page SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://news.files.bbci.co.uk/include/articles/public/somali/images/icons/icon-128x128.png",
}
`;

exports[`AMP On Demand T V Page SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://news.files.bbci.co.uk/include/articles/public/somali/images/icons/icon-144x144.png",
}
`;

exports[`AMP On Demand T V Page SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://news.files.bbci.co.uk/include/articles/public/somali/images/icons/icon-152x152.png",
}
`;

exports[`AMP On Demand T V Page SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://news.files.bbci.co.uk/include/articles/public/somali/images/icons/icon-180x180.png",
}
`;

exports[`AMP On Demand T V Page SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://news.files.bbci.co.uk/include/articles/public/somali/images/icons/icon-192x192.png",
}
`;

exports[`AMP On Demand T V Page SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://news.files.bbci.co.uk/include/articles/public/somali/images/icons/icon-384x384.png",
}
`;

exports[`AMP On Demand T V Page SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://news.files.bbci.co.uk/include/articles/public/somali/images/icons/icon-512x512.png",
}
`;

exports[`AMP On Demand T V Page SEO Canonical link 1`] = `"http://localhost:7080/somali/bbc_somali_tv/tv_programmes/w13xttqt"`;

exports[`AMP On Demand T V Page SEO Dir attribute 1`] = `"ltr"`;

exports[`AMP On Demand T V Page SEO FB admins 1`] = `"100004154058350"`;

exports[`AMP On Demand T V Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP On Demand T V Page SEO Heading level 1 1`] = `"Caawa Iyo Caalamka, 23 Juunyo 2020"`;

exports[`AMP On Demand T V Page SEO Lang attribute 1`] = `"so"`;

exports[`AMP On Demand T V Page SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "WebPage",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/somali.png",
        "width": 1024,
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/somali/bbc_somali_tv/tv_programmes/w13xttqt",
        "@type": "WebPage",
        "name": "Caawa Iyo Caalamka",
      },
      "publisher": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/somali.png",
          "width": 1024,
        },
        "name": "BBC News Somali",
        "publishingPrinciples": "https://www.bbc.com/somali/hayadeed-49283375",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/somali.png",
      "url": "http://localhost:7080/somali/bbc_somali_tv/tv_programmes/w13xttqt",
    },
    Object {
      "@type": "VideoObject",
      "description": "Kala soco telefishinka BBC News Somali 30 daqiiqo oo isugu jira warar, wareysiyo & faallooyin ku saabsan Soomaaliya iyo Caalamka",
      "duration": "PT26M30S",
      "embedURL": "https://polling.test.bbc.co.uk/ws/av-embeds/media/somali/bbc_somali_tv/w172xcmnrdmbygt/so/amp?morph_env=live",
      "name": "Caawa Iyo Caalamka",
      "thumbnailUrl": "https://ichef.bbci.co.uk/images/ic/1024x576/p06hm27g.png",
      "uploadDate": "2020-06-23T00:00:00.000Z",
    },
  ],
}
`;

exports[`AMP On Demand T V Page SEO OG description 1`] = `"Kala soco telefishinka BBC News Somali 30 daqiiqo oo isugu jira warar, wareysiyo & faallooyin ku saabsan Soomaaliya iyo Caalamka"`;

exports[`AMP On Demand T V Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/somali.png"`;

exports[`AMP On Demand T V Page SEO OG image alt 1`] = `"BBC News Somali"`;

exports[`AMP On Demand T V Page SEO OG locale 1`] = `"so-SO"`;

exports[`AMP On Demand T V Page SEO OG site name 1`] = `"BBC News Somali"`;

exports[`AMP On Demand T V Page SEO OG title 1`] = `"Caawa Iyo Caalamka - BBC News Somali"`;

exports[`AMP On Demand T V Page SEO OG type 1`] = `"website"`;

exports[`AMP On Demand T V Page SEO OG url 1`] = `"http://localhost:7080/somali/bbc_somali_tv/tv_programmes/w13xttqt"`;

exports[`AMP On Demand T V Page SEO Page title 1`] = `"Caawa Iyo Caalamka - BBC News Somali"`;

exports[`AMP On Demand T V Page SEO Robots meta tag 1`] = `"noodp,noydir"`;

exports[`AMP On Demand T V Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP On Demand T V Page SEO Twitter creator 1`] = `"@bbcsomali"`;

exports[`AMP On Demand T V Page SEO Twitter description 1`] = `"Kala soco telefishinka BBC News Somali 30 daqiiqo oo isugu jira warar, wareysiyo & faallooyin ku saabsan Soomaaliya iyo Caalamka"`;

exports[`AMP On Demand T V Page SEO Twitter image alt 1`] = `"BBC News Somali"`;

exports[`AMP On Demand T V Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/somali.png"`;

exports[`AMP On Demand T V Page SEO Twitter site 1`] = `"@bbcsomali"`;

exports[`AMP On Demand T V Page SEO Twitter title 1`] = `"Caawa Iyo Caalamka - BBC News Somali"`;

exports[`AMP On Demand T V Page a11y Assistive technology reads the brand and episode title as the headline 1`] = `"Caawa Iyo Caalamka, 23 Juunyo 2020"`;
